<resources>
    <string name="app_name">MatControls</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="project_prompt">프로젝트</string>

    <string name="project_unit">유닛</string>
    <string name="project_system">시스템</string>
    <string name="project_subsystem">서브 시스템</string>
    <string name="project_itemgroup">아이템 그룹</string>
    <string name="project_item">아이템</string>

    <string name="project_punchgroup">Punch Group</string>
    <string name="project_discipline">Discipline</string>
    <string name="project_priority">Priority</string>
</resources>
