<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/relTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#ff5f00">

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:background="@drawable/abc_ic_search_api_mtrl_alpha" />

        <TextView
            android:id="@+id/textTop"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/btnSearch"
            android:textSize="12dp"
            android:text="14037d\nFortHills Secondary Extraction Project\nCV9242 / TOMAS"/>

        <Button
            android:id="@+id/btnAccount"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_toLeftOf="@+id/btnInfo"
            android:background="@drawable/abc_ic_menu_share_mtrl_alpha" />

        <Button
            android:id="@+id/btnInfo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_toLeftOf="@+id/btnExit"
            android:background="@drawable/abc_ic_menu_moreoverflow_mtrl_alpha" />

        <Button
            android:id="@+id/btnExit"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/abc_ic_clear_mtrl_alpha" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/relTop"
        android:layout_above="@+id/linBottom"
        android:padding="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textNewPunch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Punch"
                android:textSize="25dp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"/>

            <LinearLayout
                android:id="@+id/linPunchGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/textNewPunch"
                android:layout_marginBottom="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="Punch Group"/>

                <Spinner
                    android:id="@+id/listPunchGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:prompt="@string/project_punchgroup"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linDiscipline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/linPunchGroup"
                android:layout_marginBottom="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="Discipline"/>

                <Spinner
                    android:id="@+id/listDiscipline"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:prompt="@string/project_discipline"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linPriority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/linDiscipline"
                android:layout_marginBottom="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="Priority"/>

                <Spinner
                    android:id="@+id/listPriority"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:prompt="@string/project_priority"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/linPriority"
                android:layout_marginBottom="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="Description"/>

                <EditText
                    android:id="@+id/editDescription"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/editImgList"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSaveGallery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Gallery"/>

                <Button
                    android:id="@+id/btnSaveCamera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Camera"/>

            </LinearLayout>

            <EditText
                android:id="@+id/editImgList"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/btnSavePunch"
                android:textSize="10dp"
                android:layout_marginBottom="10dp"/>

            <Button
                android:id="@+id/btnSavePunch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:text="Save"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linBottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="#ff5f00"
        android:gravity="center">

        <Button
            android:id="@+id/btnHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bottom_button"
            android:text="Home" />

        <Button
            android:id="@+id/btnNotice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bottom_button"
            android:text="Noti"/>

        <Button
            android:id="@+id/btnMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bottom_button"
            android:text="MSG"/>

        <Button
            android:id="@+id/btnGallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bottom_button"
            android:text="IMG"/>

        <Button
            android:id="@+id/btnCamera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bottom_button"
            android:text="CAM"/>

        <Button
            android:id="@+id/btnMarkup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bottom_button"
            android:text="MARK"/>

    </LinearLayout>

</RelativeLayout>
